# vrp-as-qubo

./: .gitignore  README.md  README.txt  pyproject.toml
Code/: ExApollo.py  ExMIRPg1.py  ExMIRPg2.py  ExMIRPg2_Small.py  ExSmall.py  GenTestSet.py  QUBOTools.py  README.md  RoutingProblem.py  TestFeasibility.py  TestMatrices.py  TestTools.py  generate_test_set.py  solve_w_cplex.py
Code/TestSet/: README.txt  TestTools.py  optimalSpins13.txt  optimalSpins14.txt  optimalSpins17.txt  optimalSpins26.txt  optimalSpins28.txt  optimalSpins49.txt  optimalSpins56.txt  test_14_13_f.rudy  test_14_14_f.rudy  test_14_14_o.rudy  test_17_17_f.rudy  test_17_17_o.rudy  test_17_26_f.rudy  test_17_26_o.rudy  test_21_28_f.rudy  test_21_49_f.rudy  test_21_56_f.rudy  test_21_56_o.rudy
Code/arc_based/: ExMIRPg1.py  ExSmall.py  RoutingProblem.py
Code/path_based/: ExMIRPg1.py  ExMIRPg2.py  ExSmall.py  RoutingProblem.py
Code/sequence_based/: ExMIRPg1.py  ExSmall.py  RoutingProblem.py
Doc/bib/: BibList.tex  books.bib
doc/: MIRPasQUBO.tex  main.bib
doc/bib/: gsip.bib  other.bib
qubo_instances/: EXAMPLE.py  QUBOTools.py  TestTools.py
qubo_instances/arc_based/: ExMIRPg1.py  ExMIRPg2.py  ExSmall.py  RoutingProblem.py
qubo_instances/path_based/: ExMIRPg1.py  ExMIRPg2.py  ExSmall.py  RoutingProblem.py
qubo_instances/sequence_based/: ExMIRPg1.py  ExMIRPg2.py  ExSmall.py  ExSmaller.py  ExSmallest.py  RoutingProblem.py
src/: QUBOTools.py  README.md  TestFeasibility.py  TestTools.py  generate_test_set.py  run_unittest.py  solve_w_cplex.py  test_feasibility.py
src/examples/: mirp_g1.py  (+1 more)
(+61 files in other folders)
