[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vrpqubo"
version = "0.1"
requires-python = ">=3.9"
dependencies = [
    "scipy >= 1.10.1",
]

[project.optional-dependencies]
CPLEX = ["cplex"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["vrpqubo.tests*"]

[project.scripts]
generate_test_set = "vrpqubo.generate_test_set:main"
test_feasibility = "vrpqubo.test_feasibility:main"
solve_w_cplex = "vrpqubo.solve_w_cplex:main"
